--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.5.0"
   },
   "name": "genius-car-service-server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js",
